--- a/ghi/app/src/index.css
+++ b/ghi/app/src/index.css
@@ -5,9 +5,24 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(244, 244, 244);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.title {
+  margin-bottom: 50px;
+}
+
+table {
+  max-width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px;
+  text-align: center;
+  /* background-color: white; */
+  /* border-radius: 5%; */
 }
